# calendar_puzzle

./: Cargo.toml  README.md  solve_all.sh
solutions/April/1/: Friday.txt  Monday.txt  Saturday.txt  Sunday.txt  Thursday.txt  Tuesday.txt  Wednesday.txt
solutions/April/10/: Friday.txt  Monday.txt  Saturday.txt  Sunday.txt  Thursday.txt  Tuesday.txt  Wednesday.txt
solutions/April/11/: Friday.txt  Monday.txt  Saturday.txt  Sunday.txt  Thursday.txt  Tuesday.txt  Wednesday.txt
solutions/April/12/: Friday.txt  Monday.txt  Saturday.txt  Sunday.txt  Thursday.txt  Tuesday.txt  Wednesday.txt
solutions/April/13/: Friday.txt  Monday.txt  Saturday.txt  Sunday.txt  Thursday.txt  Tuesday.txt  Wednesday.txt
solutions/April/14/: Friday.txt  Monday.txt  Saturday.txt  Sunday.txt  Thursday.txt  Tuesday.txt  Wednesday.txt
solutions/April/15/: Friday.txt  Monday.txt  Saturday.txt  Sunday.txt  Thursday.txt  Tuesday.txt  Wednesday.txt
solutions/April/16/: Friday.txt  Monday.txt  Saturday.txt  Sunday.txt  Thursday.txt  Tuesday.txt  Wednesday.txt
solutions/April/17/: Friday.txt  Monday.txt  Saturday.txt  Sunday.txt  Thursday.txt  Tuesday.txt  Wednesday.txt
solutions/April/18/: Friday.txt  Monday.txt  Saturday.txt  Sunday.txt  Thursday.txt  Tuesday.txt  Wednesday.txt
solutions/April/19/: Friday.txt  Monday.txt  Saturday.txt  Sunday.txt  Thursday.txt  Tuesday.txt  Wednesday.txt
solutions/April/2/: Friday.txt  Monday.txt  Saturday.txt  Sunday.txt  Thursday.txt  Tuesday.txt  Wednesday.txt
src/: board.rs  calendar.rs  cli.rs  evaluation.rs  main.rs  piece.rs  pieces.rs
(+2471 files in other folders)
