[package]
name = "calendar_puzzle"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
dialoguer = "0.10"
colored = "2.0"
rayon = "1.7"
strum = "0.24"
strum_macros = "0.24"
chrono = "0.4"
lazy_static = "1.5.0"
once_cell = "1.20.2"
itertools = "0.14.0"
